@@ -646,11 +646,33 @@ public class StockMarket extends StdBehavior
 			}
 			Resources.submitResource("CMKT_AREA_STOCKS/"+areaName,stocks);
 			
-			// this *might* cause this method to be recursively called, but since the resource
+			// this WILL cause this method to be recursively called, but since the resource
 			//  is in place, it will exit early and be happy.
 			for(final StockDef def : stocks.values())
+			{
 				if((def.roomID!=null)&&(def.roomID.length()>0))
 					CMLib.map().getRoom(def.roomID);
+			}
+			final Set<StockDef> realStocks = new HashSet<StockDef>();
+			for(MarketConf conf : configs)
+			{
+				synchronized(conf.shopStocksMap)
+				{
+					for(final ShopKeeper key : conf.shopStocksMap.keySet())
+						realStocks.addAll(conf.shopStocksMap.get(key));
+				}
+			}
+			final Set<StockDef> deadStocks = new HashSet<StockDef>();
+			for(final StockDef def : stocks.values())
+			{
+				if(!realStocks.contains(def))
+					deadStocks.add(def);
+			}
+			for(StockDef def : deadStocks)
+			{
+				Log.debugOut("Deleting dead stock '"+def.getTitleID()+". from "+def.roomID+" on next save.");
+				stocks.remove(def.getTitleID());
+			}
 		}
 		return stocks;
 	}
@@ -1689,7 +1711,6 @@ public class StockMarket extends StdBehavior
 		}
 	};
 
-	//TODO: deal with bad missnamed stocks plz
 	@Override
 	public boolean okMessage(final Environmental myHost, final CMMsg msg)
 	{
